# autobadger

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml
lib/: autobadger.py  enums.py  exceptions.py  registry.py  runnable.py  types.py
projects/: p1.py
scripts/: extract_version.py  main.py
src/lib/: autobadger.py  enums.py  registry.py  runnable.py  types.py
src/projects/: p1.py
src/scripts/: main.py
