[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autobadger"
version = "0.1.0"
description = "CLI tool for autograding CS 544 projects at UW-Madison"
authors = [
    { name = "Stockton Jenkins", email = "jsjenkins4@wisc.edu" }
]
dependencies = [
    "annotated-types",
    "pydantic",
    "pydantic-core",
    "typing-extensions"
]
requires-python = ">=3.10"

[tool.setuptools]
#packages = ["scripts", "lib", "projects"]
#package-dir = {"" = "src"}

[project.scripts]
autobadger = "scripts.main:main"
